<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Contacts</string>
    <string name="choose_gender">Выберите пол</string>
    <string name="first_name">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="date">Дата рождения </string>
    <string name="adress">Адрес</string>
    <string name="gender_male">Мужчина</string>
    <string name="gender_female">Женщина</string>
    <string name="img_add_btn">Изменить изображение</string>
    <string name="cancel_btn">Отменить</string>
    <string name="add_contact">Добавить контакт</string>
    <string name="photo">Изображение контакта</string>
    <string name="confirm_button">Сохранить</string>
    <string name="edit_button">Редактировать</string>
    <string name="delete_button">Удалить</string>
    <string name="alert_dialog_ok">Да</string>
    <string name="alert_dialog_cancel">Нет</string>
    <string name="not_enoughth_information">Недостаточно данных, продолжить? </string>
    <string name="alert_dialog_exit">Отмена</string>
    <string name="exit">Выход</string>
    <string name="delete_all">Удалить все контакты</string>
    <string name="obligatory_field">Поле обязательно для заполнения</string>
    <string name="deleting_all_data_dialog">Удалить все существующие контакты?</string>
    <string name="deleting_selected_data_dialog">Удалить выбранный контакт?</string>

</resources>
