<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/imageAddTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imgAddView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/photo"
                android:cropToPadding="true" />

            <Button
                android:id="@+id/imgAddBtn"
                style="@style/AppBaseTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0.63"
                android:onClick="btnImgAddClick"
                android:text="@string/img_add_btn" />
        </LinearLayout>

        <TextView
            android:id="@+id/nameAddTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/etNameAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:ems="10"
            android:hint="@string/obligatory_field"/>

        <TextView
            android:id="@+id/lastnameAddTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname" />

        <EditText
            android:id="@+id/etLastnameAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:ems="10"
            android:hint="@string/obligatory_field" >  
        </EditText>

        <TextView
            android:id="@+id/adressAddTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adress" />

        <EditText
            android:id="@+id/etAdressAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/dateAddTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <DatePicker
            android:id="@+id/AddDate"
            style="@android:style/Widget.DeviceDefault.DatePicker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:layoutMode="clipBounds"
            android:persistentDrawingCache="scrolling"
            android:spinnersShown="true" />

        <TextView
            android:id="@+id/genderAddTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_gender" />

        <RadioGroup
            android:id="@+id/rdGrAddGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/rdAddMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/gender_male" />

            <RadioButton
                android:id="@+id/rdAddFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_female" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/confirmAddBtn"
                style="@android:style/Widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtnAcceptClick"
                android:text="@string/confirm_button" />

            <Button
                android:id="@+id/cancelAddBtn"
                style="@android:style/Widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtnCancelClick"
                android:text="@string/cancel_btn" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>